# grpc-sample

proto/: sample_a.proto  sample_b.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
