[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.1" }
hyper = { version = "0.14.17", features = ["full"] }
anyhow = {version = "1.0.2"}
[build-dependencies]
tonic-build = "0.6.2"